[package]
name = "pierport"
version = "0.1.2"
edition = "2021"
rust-version = "1.76"
authors = ["Aurimas Blažulionis <aurimas@chorus.one>"]
license = "MIT"
repository = "https://github.com/ChorusOne/pierport"
documentation = "https://docs.rs/pierport"
description = "Urbit pier import protocol implementation"
keywords = [ "urbit" ]
categories = [ "asynchronous", "parsing" ]
readme = "README.md"
exclude = ["Dockerfile", "flake.nix", "flake.lock", "scripts/", "pierport_vere_db.json", ".github"]

[[bin]]
name = "pierport"
test = false
bench = false
required-features = ["bin-deps"]

[dependencies]
async_zip = { version = "0.0.15", features = ["full"] }
async-compression = { version = "0.4", features = ["zstd", "futures-io"] }
async-tar = "0.4"
anyhow = { version = "1", features = ["backtrace"] }
env_logger = "0.10"
futures = "0.3"
sha256 = { version = "1", features = ["async"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
octocrab = { version = "0.32", default-features = false, features = ["rustls"] }
log = "0.4"
tar = "0.4"
flate2 = "1"
async-trait = "0.1"
hyper = "0.14"
axum = "0.6"
once_cell = "1"

clap = { version = "4", features = ["cargo", "derive"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tokio-util = { version = "0.7", optional = true }
jsonwebtoken = { version = "9", optional = true }
reqwest = { version = "0.11", features = ["stream", "rustls-tls", "json"], default-features = false, optional = true }
toml = { version = "0.5", optional = true }
http = { version = "0.2", optional = true }
tower-http = { version = "0.4", features = ["cors"], optional = true }
tower = { version = "0.4", optional = true }

# See https://github.com/rust-lang/jobserver-rs/issues/79
[build-dependencies]
jobserver = { version = "=0.1.28", default-features = false }

[features]
default = ["bin-deps"]
bin-deps = ["clap", "anyhow/backtrace", "tokio", "tokio-util", "jsonwebtoken", "reqwest", "toml", "http", "tower-http", "tower"]
